--- a/app/src/main/res/layout/fragment_your_goal.xml
+++ b/app/src/main/res/layout/fragment_your_goal.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -14,156 +12,9 @@
             type="com.tarrakki.module.goal.Goal" />
     </data>
 
-    <android.support.v4.widget.NestedScrollView
+    <org.supportcompact.widgets.NonSwipeableViewPager
+        android:id="@+id/mPageGoal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        tools:context=".module.yourgoal.YourGoalFragment">
+        android:layout_height="match_parent" />
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/default_space"
-            android:background="@drawable/shape_cart_view"
-            android:elevation="@dimen/space_2"
-            android:padding="@dimen/space_8">
-
-            <View
-                android:id="@+id/mStepLine"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/space_8"
-                android:layout_marginTop="@dimen/default_space"
-                android:background="@drawable/shape_double_line"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/ivStep1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_step_bg"
-                app:layout_constraintBottom_toBottomOf="@id/mStepLine"
-                app:layout_constraintStart_toStartOf="@id/mStepLine"
-                app:layout_constraintTop_toTopOf="@id/mStepLine" />
-
-            <ImageView
-                android:id="@+id/ivStep2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_step_bg"
-                app:layout_constraintBottom_toBottomOf="@id/mStepLine"
-                app:layout_constraintEnd_toEndOf="@id/mStepLine"
-                app:layout_constraintStart_toStartOf="@id/mStepLine"
-                app:layout_constraintTop_toTopOf="@id/mStepLine" />
-
-
-            <ImageView
-                android:id="@+id/ivStep3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_step_bg"
-                app:layout_constraintBottom_toBottomOf="@id/mStepLine"
-                app:layout_constraintEnd_toEndOf="@id/mStepLine"
-                app:layout_constraintTop_toTopOf="@id/mStepLine" />
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/view2"
-                android:layout_width="144dp"
-                android:layout_height="144dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/default_space"
-                android:elevation="12dp"
-                app:cardBackgroundColor="@color/circular_bg"
-                app:cardCornerRadius="72dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivStep2">
-
-                <ImageView
-                    android:id="@+id/imageView1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingStart="@dimen/space_8"
-                    android:paddingEnd="@dimen/space_8"
-                    android:paddingBottom="@dimen/space_40"
-                    app:imgUrl="@{goal.imgUrl}"
-                    tools:src="@drawable/own_a_home" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_marginBottom="@dimen/space_30"
-                    android:gravity="center"
-                    android:maxLines="2"
-                    android:minLines="2"
-                    android:paddingStart="@dimen/space_5"
-                    android:paddingEnd="@dimen/space_5"
-                    android:text="@{goal.title}"
-                    android:textAllCaps="true"
-                    android:textColor="@color/semi_black"
-                    android:textSize="@dimen/sp9"
-                    tools:text="Children's Education" />
-
-            </android.support.v7.widget.CardView>
-
-            <org.supportcompact.widgets.WrapContentViewPager
-                android:id="@+id/mPageGoal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:overScrollMode="never"
-                android:paddingTop="@dimen/space_32"
-                android:paddingBottom="@dimen/space_32"
-                app:layout_constraintBottom_toTopOf="@+id/btnPrevious"
-                app:layout_constraintTop_toBottomOf="@+id/view2" />
-
-            <Button
-                android:id="@+id/btnPrevious"
-                android:layout_width="124dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="@dimen/space_8"
-                android:background="@drawable/shape_btn_idle_bg"
-                android:drawableStart="@drawable/ic_arrow_previous"
-                android:drawablePadding="@dimen/space_8"
-                android:fontFamily="@font/lato_semibold"
-                android:gravity="center"
-                android:paddingStart="20dp"
-                android:paddingEnd="24dp"
-                android:text="@string/previous"
-                android:textAllCaps="false"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/guideline4" />
-
-            <Button
-                android:id="@+id/btnNext"
-                android:layout_width="124dp"
-                android:layout_height="38dp"
-                android:layout_marginStart="@dimen/space_8"
-                android:background="@drawable/shape_btn_idle_bg"
-                android:drawableEnd="@drawable/ic_arrow_next_white"
-                android:fontFamily="@font/lato_semibold"
-                android:gravity="center"
-                android:paddingStart="38dp"
-                android:paddingEnd="28dp"
-                android:text="@string/next"
-                android:textAllCaps="false"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/guideline4" />
-
-            <android.support.constraint.Guideline
-                android:id="@+id/guideline4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.5" />
-
-
-        </android.support.constraint.ConstraintLayout>
-
-    </android.support.v4.widget.NestedScrollView>
 </layout>
