1: Worked on implementing UI for the goal summary screen.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -74,15 +74,16 @@
                 android:fontFamily="@font/lato_bold"
                 android:gravity="center"
                 android:minWidth="140dp"
-                android:text="@string/dummy"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="@android:color/white"
+                app:anim="@{true}"
                 app:layout_constraintBottom_toBottomOf="@+id/homeView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.135"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.45"
+                app:price="@{3246.00}"
                 tools:text="@string/dummy" />
 
             <TextView
@@ -151,11 +152,13 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lato_semibold"
                 android:gravity="center"
-                android:text="@string/dummy2"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@color/colorAccent"
+                app:anim="@{true}"
                 app:layout_constraintStart_toEndOf="@id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/tvTotalReturn" />
+                app:layout_constraintTop_toBottomOf="@+id/tvTotalReturn"
+                app:returns="@{36.17}"
+                tools:text="@string/dummy2" />
 
             <TextView
                 android:id="@+id/tvTotalReturnInPercentage"
@@ -173,9 +176,9 @@
                 android:id="@+id/llWhyTarrakki"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/default_space"
                 android:layout_marginStart="@dimen/default_space"
                 android:layout_marginTop="@dimen/default_space"
+                android:layout_marginEnd="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="2dp"
                 android:orientation="vertical"
@@ -216,9 +219,9 @@
                 android:id="@+id/rvHomeItem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/default_space"
                 android:layout_marginStart="@dimen/default_space"
                 android:layout_marginTop="@dimen/default_space"
+                android:layout_marginEnd="@dimen/default_space"
                 app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -234,9 +237,9 @@
                 android:id="@+id/btnIdle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/default_space"
-                android:layout_marginEnd="@dimen/default_space"
                 android:layout_marginStart="@dimen/default_space"
+                android:layout_marginEnd="@dimen/default_space"
+                android:layout_marginBottom="@dimen/default_space"
                 android:background="@drawable/shape_btn_idle_bg"
                 android:fontFamily="@font/lato_semibold"
                 android:text="@string/move_idle_money_from_your_bank_a_c"
