--- a/app/src/main/res/layout/set_your_goal_step2.xml
+++ b/app/src/main/res/layout/set_your_goal_step2.xml
@@ -41,32 +41,38 @@
 
             <ImageView
                 android:id="@+id/ivStep1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_step_bg"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@color/white"
+                app:imgUrl="@{yourGoal.drawable1}"
                 app:layout_constraintBottom_toBottomOf="@id/mStepLine"
                 app:layout_constraintStart_toStartOf="@id/mStepLine"
-                app:layout_constraintTop_toTopOf="@id/mStepLine" />
+                app:layout_constraintTop_toTopOf="@id/mStepLine"
+                tools:src="@drawable/shape_step_bg" />
 
             <ImageView
                 android:id="@+id/ivStep2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_step_bg"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@color/white"
+                app:imgUrl="@{yourGoal.drawable2}"
                 app:layout_constraintBottom_toBottomOf="@id/mStepLine"
                 app:layout_constraintEnd_toEndOf="@id/mStepLine"
                 app:layout_constraintStart_toStartOf="@id/mStepLine"
-                app:layout_constraintTop_toTopOf="@id/mStepLine" />
+                app:layout_constraintTop_toTopOf="@id/mStepLine"
+                tools:src="@drawable/shape_step_bg" />
 
 
             <ImageView
                 android:id="@+id/ivStep3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_step_bg"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@color/white"
+                app:imgUrl="@{yourGoal.drawable3}"
                 app:layout_constraintBottom_toBottomOf="@id/mStepLine"
                 app:layout_constraintEnd_toEndOf="@id/mStepLine"
-                app:layout_constraintTop_toTopOf="@id/mStepLine" />
+                app:layout_constraintTop_toTopOf="@id/mStepLine"
+                tools:src="@drawable/shape_step_bg" />
 
             <android.support.v7.widget.CardView
                 android:id="@+id/view2"
@@ -142,7 +148,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:el_duration="500"
-                app:el_expanded="false"
+                app:el_expanded="true"
                 app:expanded="@{yourGoal.selected}"
                 app:layout_constraintTop_toBottomOf="@+id/switchHasHomeLoan">
 
@@ -218,6 +224,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="@dimen/space_32"
                 android:layout_marginEnd="@dimen/space_8"
+                android:layout_marginBottom="@dimen/space_8"
                 android:background="@drawable/shape_btn_idle_bg"
                 android:drawableStart="@drawable/ic_arrow_previous"
                 android:drawablePadding="@dimen/space_8"
@@ -230,7 +237,6 @@
                 android:textAllCaps="false"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/white"
-                android:layout_marginBottom="@dimen/space_8"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
                 app:layout_constraintTop_toBottomOf="@id/expandableLayout"
@@ -242,10 +248,10 @@
                 android:layout_height="38dp"
                 android:layout_marginStart="@dimen/space_8"
                 android:layout_marginTop="@dimen/space_32"
+                android:layout_marginBottom="@dimen/space_8"
                 android:background="@drawable/shape_btn_idle_bg"
                 android:drawableEnd="@drawable/ic_arrow_next_white"
                 android:fontFamily="@font/lato_semibold"
-                android:layout_marginBottom="@dimen/space_8"
                 android:gravity="center"
                 android:onClick="@{yourGoal.onNext}"
                 android:paddingStart="38dp"
