--- a/app/src/main/res/layout/set_your_goal_step3.xml
+++ b/app/src/main/res/layout/set_your_goal_step3.xml
@@ -41,32 +41,38 @@
 
             <ImageView
                 android:id="@+id/ivStep1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_step_bg"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@color/white"
+                app:imgUrl="@{yourGoal.drawable1}"
                 app:layout_constraintBottom_toBottomOf="@id/mStepLine"
                 app:layout_constraintStart_toStartOf="@id/mStepLine"
-                app:layout_constraintTop_toTopOf="@id/mStepLine" />
+                app:layout_constraintTop_toTopOf="@id/mStepLine"
+                tools:src="@drawable/shape_step_bg" />
 
             <ImageView
                 android:id="@+id/ivStep2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_step_bg"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@color/white"
+                app:imgUrl="@{yourGoal.drawable2}"
                 app:layout_constraintBottom_toBottomOf="@id/mStepLine"
                 app:layout_constraintEnd_toEndOf="@id/mStepLine"
                 app:layout_constraintStart_toStartOf="@id/mStepLine"
-                app:layout_constraintTop_toTopOf="@id/mStepLine" />
+                app:layout_constraintTop_toTopOf="@id/mStepLine"
+                tools:src="@drawable/shape_step_bg" />
 
 
             <ImageView
                 android:id="@+id/ivStep3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_step_bg"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@color/white"
+                app:imgUrl="@{yourGoal.drawable3}"
                 app:layout_constraintBottom_toBottomOf="@id/mStepLine"
                 app:layout_constraintEnd_toEndOf="@id/mStepLine"
-                app:layout_constraintTop_toTopOf="@id/mStepLine" />
+                app:layout_constraintTop_toTopOf="@id/mStepLine"
+                tools:src="@drawable/shape_step_bg" />
 
             <android.support.v7.widget.CardView
                 android:id="@+id/view2"
@@ -217,10 +223,8 @@
                 android:layout_marginStart="@dimen/space_8"
                 android:layout_marginTop="@dimen/space_32"
                 android:layout_marginBottom="@dimen/space_8"
-                android:alpha="0.6"
                 android:background="@drawable/shape_btn_idle_bg"
                 android:drawableEnd="@drawable/ic_arrow_next_white"
-                android:enabled="false"
                 android:fontFamily="@font/lato_semibold"
                 android:gravity="center"
                 android:onClick="@{yourGoal.onNext}"
