--- a/app/src/main/res/layout/summary_txt.xml
+++ b/app/src/main/res/layout/summary_txt.xml
@@ -12,19 +12,18 @@
 
     <EditText
         android:id="@+id/edtDurations"
-        android:layout_width="wrap_content"
+        android:layout_width="56dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_rounded_gray"
+        android:background="@drawable/shape_rectangle_gray"
         android:inputType="number"
         android:maxLength="2"
-        android:paddingStart="@dimen/space_32"
-        android:paddingTop="@dimen/space_8"
-        android:paddingEnd="@dimen/space_32"
-        android:paddingBottom="@dimen/space_8"
+        android:gravity="center"
+        android:paddingTop="@dimen/space_4"
+        android:paddingBottom="@dimen/space_4"
         android:text="@={goalSummary.txt}"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/semi_black"
         app:isPositiveCurrency="@{true}"
-        tools:text="5" />
+        tools:text="99" />
 
 </layout>
