--- a/app/src/main/res/layout/summary_txt_currency.xml
+++ b/app/src/main/res/layout/summary_txt_currency.xml
@@ -12,18 +12,18 @@
 
     <LinearLayout
         android:id="@+id/llContainer"
-        android:layout_width="120dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_rounded_gray"
+        android:background="@drawable/shape_rectangle_gray"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:padding="@dimen/space_8">
+        android:padding="@dimen/space_4">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_8"
-            android:layout_marginEnd="@dimen/space_8"
+            android:layout_marginStart="@dimen/space_4"
+            android:layout_marginEnd="@dimen/space_4"
             android:text="@string/rs_symbol"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/semi_black" />
@@ -32,6 +32,7 @@
             android:id="@+id/edtInvestAmount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/space_4"
             android:background="@null"
             android:inputType="number"
             android:text="@={goalSummary.txt}"
