--- a/app/src/main/res/layout/set_your_goal_step3.xml
+++ b/app/src/main/res/layout/set_your_goal_step3.xml
@@ -13,6 +13,10 @@
             name="goal"
             type="com.tarrakki.module.goal.Goal" />
 
+        <variable
+            name="onEditorAction"
+            type="android.widget.TextView.OnEditorActionListener" />
+
     </data>
 
     <android.support.v4.widget.NestedScrollView
@@ -135,7 +139,8 @@
                 android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_switch_bg"
                 android:button="@null"
-                android:checked="@={yourGoal.ans}"
+                android:checked="@{yourGoal.selected}"
+                android:onClick="@{yourGoal.onToggleClick}"
                 android:textOff=""
                 android:textOn=""
                 app:layout_constraintEnd_toEndOf="parent"
@@ -184,11 +189,13 @@
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:hint="1,00,000"
+                    android:imeOptions="actionNext"
                     android:inputType="number"
                     android:text="@={yourGoal.answered2}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/semi_black"
-                    app:isPositiveCurrency="@{true}" />
+                    app:isPositiveCurrency="@{true}"
+                    app:onEditorAction="@{onEditorAction}" />
 
             </LinearLayout>
 
