--- a/app/src/main/res/drawable/shape_monthly_investment_bg.xml
+++ b/app/src/main/res/drawable/shape_monthly_investment_bg.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#2B1328" />
+    <gradient
+        android:centerColor="#4FB665"
+        android:endColor="#33AD74"
+        android:startColor="#6BC256" />
     <size
         android:width="@dimen/space_16"
         android:height="@dimen/space_16" />
