--- a/app/src/main/res/layout/fragment_your_goal_summary.xml
+++ b/app/src/main/res/layout/fragment_your_goal_summary.xml
@@ -112,6 +112,7 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
                 <Button
+                    android:id="@+id/btnAddThisGoal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
@@ -145,10 +146,10 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/lato_semibold"
-                    android:layout_marginTop="@dimen/space_8"
                     android:layout_marginStart="@dimen/space_8"
+                    android:layout_marginTop="@dimen/space_8"
                     android:layout_marginEnd="@dimen/space_8"
+                    android:fontFamily="@font/lato_semibold"
                     android:text="@string/here_is_a_summary_of_your_goal"
                     android:textColor="@android:color/black" />
 
@@ -166,9 +167,9 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/space_25"
                     android:background="@drawable/shape_goal_summary_bg"
                     android:lineSpacingExtra="@dimen/space_4"
-                    android:layout_marginTop="@dimen/space_25"
                     android:padding="8dp"
                     android:text="@{vm.GSummary}"
                     android:textColor="@color/semi_white"
