--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,9 @@
     <color name="lighter_gray">#ddd</color>
     <color name="darker_gray">#aaa</color>
     <color name="home_title_color">#B5ADB5</color>
-    <color name="equity_fund_color">#2C87EC</color>
-    <color name="debt_fund_color">#67C6C6</color>
+    <color name="equity_fund_color">#A32CC3</color>
+    <color name="debt_fund_color">#C762E3</color>
+    <color name="balanced_fund_color">#510666</color>
     <color name="item_selected_color">#A14E9E</color>
     <color name="semi_black">#323232</color>
     <color name="semi_white">#EADDEA</color>
