--- a/app/src/main/res/layout/row_cart_item.xml
+++ b/app/src/main/res/layout/row_cart_item.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="fund"
             type="com.tarrakki.module.invest.Fund" />
@@ -16,21 +18,176 @@
         android:layout_height="wrap_content"
         android:background="@drawable/shape_cart_item_bg"
         android:padding="@dimen/space_8"
-        tools:layout_height="200dp">
+        tools:layout_marginBottom="@dimen/space_8">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/tvName"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/space_8"
             android:fontFamily="@font/lato_semibold"
+            android:maxLines="2"
             android:text="@{fund.name}"
             android:textColor="@color/white"
+            app:layout_constraintEnd_toStartOf="@id/ivDelete"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="SBI Banking and Financial Services Growth Direct Plan" />
 
         <ImageView
+            android:id="@+id/ivDelete"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/circular_bg_white"
+            android:padding="@dimen/space_8"
+            android:src="@drawable/delete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_space"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="@font/lato_semibold"
+            android:text="@{fund.fundType}"
+            android:textColor="#2C87EC"
+            app:layout_constraintEnd_toStartOf="@+id/tvNewLbl"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvName"
+            tools:text="Equity" />
+
+        <TextView
+            android:id="@+id/tvNewLbl"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_space"
+            android:text="@string/new_"
+            android:textColor="@color/semi_white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.33"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvName" />
+
+        <TextView
+            android:id="@+id/tvNew"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="@dimen/default_space"
+            android:fontFamily="@font/lato_semibold"
+            android:text="@{fund.whatNew}"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tvNewLbl"
+            app:layout_constraintTop_toBottomOf="@+id/tvName"
+            tools:text="Folio" />
+
+        <TextView
+            android:id="@+id/tvSIP"
+            android:layout_width="56dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_8"
+            android:background="@drawable/shape_fun_type_selected"
+            android:fontFamily="@font/lato_semibold"
+            android:gravity="center"
+            android:padding="@dimen/space_8"
+            android:text="@string/sip"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvNewLbl" />
+
+        <EditText
+            android:id="@+id/edtSIPAmount"
+            android:layout_width="80dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="@dimen/space_8"
+            android:background="@drawable/shape_edt_white_round"
+            android:fontFamily="@font/lato_semibold"
+            android:inputType="number"
+            android:maxLines="1"
+            android:padding="@dimen/space_8"
+            android:text="@string/dummy1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/tvSIP"
+            app:layout_constraintStart_toEndOf="@id/tvSIP"
+            app:layout_constraintTop_toTopOf="@+id/tvSIP"
+            tools:text="@string/dummy3" />
+
+        <TextView
+            android:id="@+id/tvDate"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="@dimen/space_8"
+            android:background="@drawable/shape_edt_white_round"
+            android:drawableEnd="@drawable/ic_drop_down_white_24dp"
+            android:fontFamily="@font/lato_semibold"
+            android:padding="@dimen/space_8"
+            android:text="@{fund.date}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/edtSIPAmount"
+            app:layout_constraintStart_toEndOf="@id/edtSIPAmount"
+            app:layout_constraintTop_toTopOf="@+id/edtSIPAmount"
+            tools:text="07 Sep 2018" />
+
+        <TextView
+            android:id="@+id/tvAddOneTimeAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_space"
+            android:fontFamily="@font/lato_bold"
+            android:text="@string/add_one_time_amount"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="#F6C469"
+            android:visibility="@{fund.hasOneTimeAmount ? View.GONE: View.VISIBLE}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvSIP"
+            tools:visibility="invisible" />
+
+
+        <TextView
+            android:id="@+id/tvLumpsum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_space"
+            android:background="@drawable/shape_fun_type_selected"
+            android:fontFamily="@font/lato_semibold"
+            android:gravity="center"
+            android:paddingStart="@dimen/space_16"
+            android:paddingTop="@dimen/space_8"
+            android:paddingEnd="@dimen/space_16"
+            android:paddingBottom="@dimen/space_8"
+            android:text="@string/lumpsum_amount"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/white"
+            android:visibility="@{fund.hasOneTimeAmount ? View.VISIBLE: View.INVISIBLE}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvSIP"
+            tools:visibility="visible" />
+
+        <EditText
+            android:id="@+id/edtLumpsum"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="@dimen/space_8"
+            android:background="@drawable/shape_edt_white_round"
+            android:fontFamily="@font/lato_semibold"
+            android:inputType="number"
+            android:maxLines="1"
+            android:minWidth="100dp"
+            android:padding="@dimen/space_8"
+            android:text="@string/dummy3"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/white"
+            android:visibility="@{fund.hasOneTimeAmount ? View.VISIBLE: View.INVISIBLE}"
+            app:layout_constraintBottom_toBottomOf="@+id/tvLumpsum"
+            app:layout_constraintStart_toEndOf="@id/tvLumpsum"
+            app:layout_constraintTop_toTopOf="@+id/tvLumpsum"
+            tools:text="@string/dummy3"
+            tools:visibility="visible" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
